objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCode__c</fullName>
        <label>CCode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Percentage__c</fullName>
        <formula>Clicks__c/Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Clicks_Opens_Ratio__c</fullName>
        <formula>Click_Percentage__c/Open_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicks/Opens Ratio %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <label>Clicks</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Clicks</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <formula>Delivered__c/Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distinct_Clicks__c</fullName>
        <label>Distinct Clicks</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Distinct Click</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distinct_Clicks_percentage__c</fullName>
        <formula>Distinct_Clicks__c/Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distinct Clicks %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distinct_Open__c</fullName>
        <formula>Distinct_Opens__c / Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distinct Open %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distinct_Opens__c</fullName>
        <label>Distinct Opens</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Distinct Open</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>Event__r.Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Stage_Date__c</fullName>
        <formula>Event__r.Stage_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Event Name</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Of_Sold_Opportunities__c</fullName>
        <formula>Target_of_Opportunities__c *  Expected_Win_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected # Of Sold Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Win_Ratio__c</fullName>
        <label>Expected Win Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>GroupName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HB__c</fullName>
        <label>HB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Percentage__c</fullName>
        <formula>Open__c / Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Opened</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optouts_Percentage__c</fullName>
        <formula>Optouts__c/Transmitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optouts %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Optouts__c</fullName>
        <label>Optouts</label>
        <summaryFilterItems>
            <field>CampaignMember.Status__c</field>
            <operation>equals</operation>
            <value>Optout</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Code__c</fullName>
        <label>Primary Campaign Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VIP Registration</fullName>
                </value>
                <value>
                    <fullName>Conference Registration</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Hosted Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rcode__c</fullName>
        <label>Rcode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB__c</fullName>
        <label>SB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubExpo_Name__c</fullName>
        <formula>IF(OR(ISNULL(SubExpo__c ),isblank(SubExpo__c)) , '_None', SubExpo__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubExpo Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubExpo__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Group__c</fullName>
        <label>Target Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_NSF__c</fullName>
        <inlineHelpText>Exhibitor related field</inlineHelpText>
        <label>Target NSF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <inlineHelpText>Attendee related field</inlineHelpText>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Units_nsf_Booth__c</fullName>
        <label>Target Units (nsf) - Booth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Verified_Registrants__c</fullName>
        <description>Target of # verified registrants</description>
        <inlineHelpText>Attendee related field</inlineHelpText>
        <label>Target Verified Registrants</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_num_of_records__c</fullName>
        <label>Estimated Audience Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Companies_Booth__c</fullName>
        <label>Target # of Companies - Booth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Companies_Online__c</fullName>
        <label>Target # of Companies - Online</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Companies_Other__c</fullName>
        <label>Target # of Companies - Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Companies_Print_Ad__c</fullName>
        <label>Target # of Companies - Print Ad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Companies_Sponsorship__c</fullName>
        <label>Target # of Companies - Sponsorship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_of_Opportunities__c</fullName>
        <label>Target # of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technique__c</fullName>
        <label>Technique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Inbound Inquiry</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transmitted__c</fullName>
        <label>Transmitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variation__c</fullName>
        <formula>Target__c - Actual__c</formula>
        <label>Variation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weeks_Out__c</fullName>
        <formula>Case(0, 
IF(Target_Start_Date__c &gt; Today(), VALUE('Null') ,0), 
IF( (Target_End_Date__c &gt;= TODAY() &amp;&amp; Target_Start_Date__c &lt;=Today()) ,(Target_End_Date__c - TODAY() )/7, 0), 
IF( Target_End_Date__c &lt;Today(), 0, 0) 
)</formula>
        <label>Weeks Left In Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Active_Campaigns1</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Pending</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns3</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Event__c</columns>
        <columns>Target_Start_Date__c</columns>
        <columns>Target_End_Date__c</columns>
        <columns>Technique__c</columns>
        <columns>Weeks_Out__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Pending</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Technique__c</columns>
        <columns>Target_Start_Date__c</columns>
        <columns>Target_End_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>X2020_CEDIA_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 CEDIA</value>
        </filters>
        <label>2020 CEDIA Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Attendee</fullName>
        <active>true</active>
        <label>Attendee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exhibitor</fullName>
        <active>true</active>
        <label>Exhibitor</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Campaign_Name_do_not_modify</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot modify Campaign Name.</errorMessage>
    </validationRules>
</CustomObject>